gccida/g0/ix86_function_value
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/i386.c:2752:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( valtype->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/i386.c:2760:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_REG( ( machine_mode)( BYTE5( valtype->block.abstract_origin) >> 1), 0); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/i386.c:2765:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[BYTE5( valtype->block.abstract_origin) >> 1] == MODE_FLOAT && ( target_flags & 0x20) != 0 ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/i386.c:2770:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[BYTE5( valtype->block.abstract_origin) >> 1] == MODE_VECTOR_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/i386.c:2771:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[BYTE5( valtype->block.abstract_origin) >> 1] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/i386.c:2779:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_REG( ( machine_mode)( BYTE5( valtype->block.abstract_origin) >> 1), v2); 
                      ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_function_value/src/obj/i386.o] Error 1
